# nuage-openstack-neutron

./: .coveragerc  .gitignore  .stestr.conf  .testr.conf  .zuul.yaml  HACKING.rst  README.md  README.rst  build_nuage_plugin_deb.sh  build_nuage_plugin_rpm.sh  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
debian/: changelog  control  copyright
devstack/: README.rst  functions  plugin.sh  settings
devstack/files/debs/: nuage-openstack-neutron
devstack/files/rpms/: nuage-openstack-neutron
devstack/lib/: ml2  nuage  nuage_interface.py  nuage_switchdev_policy.json  nuagenetlib
devstack/upgrade/: resources.sh  settings  upgrade.sh
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/init.d/: nuage-vpn-agent
etc/neutron/plugins/nuage/: nuage_plugin.ini  plugin.ini.sample
etc/neutron/policy.d/: nuage_policy.json  nuage_secure_netpartition_example_policy.json
nuage_neutron/: __init__.py
nuage_neutron/agent/linux/: exceptions.py  nuage_interface.py
nuage_neutron/bgpvpn/services/service_drivers/: driver.py
nuage_neutron/db/: api.py
nuage_neutron/db/migration/alembic_migrations/: __init__.py  env.py  script.py.mako
nuage_neutron/flow_classifier/: nuage_flow_classifier_plugin.py  nuage_flowclassifier_db.py
nuage_neutron/flow_classifier/extensions/: __init__.py  nuage_flow_classifier.py
nuage_neutron/fwaas/db/: fwaas_db.py
nuage_neutron/fwaas/services/firewall/: fwaas_plugin.py
nuage_neutron/ipam/driver/: driver.py
nuage_neutron/ipam/drivers/nuage_internal/: driver.py
nuage_neutron/ipam/drivers/nuage_vsd_managed/: driver.py
nuage_neutron/lbaas/agent/: nuage_interface.py
nuage_neutron/lbaas/common/: exceptions.py
nuage_neutron/plugins/common/: __init__.py  addresspair.py  base_plugin.py  callback_manager.py  capabilities.py  config.py  constants.py  exceptions.py  externalsg.py  gateway.py  net_topology_db.py  nuage_models.py  nuagedb.py  port_binding_model.py  port_dhcp_options.py  port_security.py  qos_driver.py  routing_mechanisms.py  time_tracker.py  trunk_db.py  utils.py  validation.py
nuage_neutron/plugins/common/extensions/: net_topology.py  nuage_floatingip.py  nuage_l2bridge.py  nuage_network.py  nuage_plugin_stats.py  nuage_redirect_target.py  nuage_router.py  nuage_securitygroup.py  nuage_subnet.py  nuagefloatingip.py  nuagepolicygroup.py  pluginstats.py
nuage_neutron/plugins/common/service_plugins/: externalsg.py  l3.py  nuage_apis.py  nuage_l2bridge.py  nuage_plugin_stats.py  resources.py  service_plugin_stats.py  vsd_passthrough_resource.py
nuage_neutron/plugins/hwvtep/: mech_driver.py  trunk_driver.py
nuage_neutron/plugins/nuage/: addresspair.py  externalsg.py  gateway.py  nuage_core_wrapper.py  nuagedb.py  plugin.py  syncmanager.py
nuage_neutron/plugins/nuage/common/: config.py  constants.py  exceptions.py  utils.py
nuage_neutron/plugins/nuage/extensions/: appdesigner.py  netpartition.py  nuage_external_security_group.py  nuage_floatingip.py  (+6 more)
nuage_neutron/plugins/nuage_baremetal/: mech_nuage.py  network_api.py  portsecurity.py  portsecurity_callback.py  sg_callback.py  trunk_driver.py
nuage_neutron/plugins/nuage_ml2/: mech_nuage.py  nuage_ml2_wrapper.py  nuage_network_ext_driver.py  nuage_port_ext_driver.py  nuage_subnet_ext_driver.py  securitygroup.py  trunk_driver.py  type_nuage_hybrid_mpls.py
nuage_neutron/plugins/sriov/: mech_nuage.py  trunk_driver.py
nuage_neutron/sfc/: nuage_sfc_db.py  nuage_sfc_plugin.py
nuage_neutron/tests/functional/: test_mech_nuage_functional.py
nuage_neutron/tests/unit/: test_mech_nuage.py  test_nuage_apis.py  test_nuage_exts.py  test_nuage_l3.py  test_nuage_redirect_target.py  test_nuage_securitygroup.py  test_plugin.py  test_restproxy.py  test_time_tracker.py  test_utils.py
nuage_neutron/vpnaas/: nuage_agent.py  nuage_interface.py  nuage_vpn_svc.py
nuage_neutron/vpnaas/common/: topics.py
nuage_neutron/vpnaas/device_drivers/: driver.py
nuage_neutron/vpnaas/service_drivers/: driver.py
nuage_neutron/vsdclient/: restproxy.py  vsdclient.py  vsdclient_fac.py
nuage_neutron/vsdclient/common/: cms_id_helper.py  constants.py  gw_helper.py  helper.py  nuagelib.py  pg_helper.py  pnet_helper.py
nuage_neutron/vsdclient/impl/: vsdclientimpl.py
nuage_neutron/vsdclient/resources/: dhcpoptions.py  domain.py  fwaas.py  gateway.py  l2domain.py  netpartition.py  policygroups.py  qos.py  trunk.py  vm.py  vmipreservation.py
playbooks/: pre-grenade.yaml  pre-run.yaml  run-grenade.yaml
playbooks/tempest-aio-fwaas/: run.yaml
playbooks/tempest-aio-lbaas/: run.yaml
playbooks/tempest-aio-ml2/: run.yaml
playbooks/tempest-aio-octavia/: run.yaml
playbooks/tempest-aio-rally/: post.yaml  run.yaml
playbooks/tempest-aio-sfc/: run.yaml
playbooks/tempest-aio-sriov/: run.yaml
playbooks/tempest-aio-switchdev/: run.yaml
playbooks/tempest-aio-xaas/: run.yaml
rally-jobs/: README.rst  nuage-openstack-neutron.yaml
rally-jobs/plugins/: README.rst  network_plugin.py
roles/set-job-flavor/: README.rst
roles/set-job-flavor/defaults/: main.yaml
roles/set-job-flavor/tasks/: main.yaml
scripts/: generate_cms_id.py
tools/: check_newlines.sh  run_bashate.sh  tox_install.sh
(+49 files in other folders)
