[metadata]
name = nuage-neutron
summary = "Openstack Neutron Plugin for Nuage Networks"
description-file =
    README.rst
author = Alcatel-Lucent USA Inc
author-email = info@nuagenetworks.net
home-page = http://www.nuagenetworks.net
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    nuage_neutron

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = nuage_neutron/locale
domain = nuage-neutron

[update_catalog]
domain = nuage-neutron
output_dir = nuage_neutron/locale
input_file = nuage_neutron/locale/nuage-neutron.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nuage_neutron/locale/nuage-neutron.pot
