[metadata]
name = nuage-openstack-neutron
summary = "Openstack Neutron Plugin for Nuage Networks"
description-file =
    README.rst
author = Nokia
author-email = info@nuagenetworks.net
home-page = http://www.nuagenetworks.net
license = ASL 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    nuage_neutron
data_files =
    /etc/neutron/plugins/nuage =
        etc/neutron/plugins/nuage/plugin.ini.sample
    /etc/neutron/rootwrap.d =
        etc/neutron/rootwrap.d/lbaas-nuage.filters
    /etc/neutron/policy.d =
        etc/neutron/policy.d/nuage_policy.json
    /etc/init.d =
         etc/init.d/nuage-vpn-agent
    /usr/bin =
         usr/bin/nuage-vpn-agent

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = nuage_neutron/locale
domain = nuage-neutron

[update_catalog]
domain = nuage-neutron
output_dir = nuage_neutron/locale
input_file = nuage_neutron/locale/nuage-neutron.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nuage_neutron/locale/nuage-neutron.pot

[entry_points]
neutron.ml2.mechanism_drivers =
    nuage = nuage_neutron.plugins.nuage_ml2.mech_nuage:NuageMechanismDriver
    nuage_sriov = nuage_neutron.plugins.sriov.mech_nuage:NuageSriovMechanismDriver
    nuage_baremetal = nuage_neutron.plugins.nuage_baremetal.mech_nuage:NuageBaremetalMechanismDriver
    nuage_hwvtep = nuage_neutron.plugins.hwvtep.mech_driver:NuageHwVtepMechanismDriver
neutron.ml2.extension_drivers =
    nuage_subnet = nuage_neutron.plugins.nuage_ml2.nuage_subnet_ext_driver:NuageSubnetExtensionDriver
    nuage_port = nuage_neutron.plugins.nuage_ml2.nuage_port_ext_driver:NuagePortExtensionDriver
    nuage_network =  nuage_neutron.plugins.nuage_ml2.nuage_network_ext_driver:NuageNetworkExtensionDriver
neutron.ipam_drivers =
    nuage_internal = nuage_neutron.ipam.drivers.nuage_internal.driver:NuageNeutronDbPool
    nuage_vsd_managed = nuage_neutron.ipam.drivers.nuage_vsd_managed.driver:NuageVSDManagedDbPool
neutron.db.alembic_migrations =
    nuage = nuage_neutron.db.migration:alembic_migrations
neutron.service_plugins =
    NuagePortAttributes = nuage_neutron.plugins.common.service_plugins.port_attributes.service_plugin:NuagePortAttributesServicePlugin
    NuageFWaaS = nuage_neutron.fwaas.services.firewall.fwaas_plugin:NuageFWaaSPlugin
    NuageL3 = nuage_neutron.plugins.common.service_plugins.l3:NuageL3Plugin
    NuageAPI = nuage_neutron.plugins.common.service_plugins.nuage_apis:NuageApi
    NuageNetTopology = nuage_neutron.plugins.common.service_plugins.net_topology.plugin:NuageNetTopologyPlugin
    NuagePluginStats = nuage_neutron.plugins.common.service_plugins.nuage_plugin_stats:NuagePluginStats
    NuageFC = nuage_neutron.flow_classifier.nuage_flow_classifier_plugin:NuageFlowClassifierPlugin
    NuageSFC = nuage_neutron.sfc.nuage_sfc_plugin:NuageSFCPlugin
    NuageL2Bridge = nuage_neutron.plugins.common.service_plugins.nuage_l2bridge:NuageL2BridgePlugin
neutron.ml2.baremetal.provisioning_driver =
    nuage_gateway_bridge = nuage_neutron.plugins.nuage_baremetal.drivers.nuage_gateway_bridge:NuageGatewayDriverBridge
neutron.interface_drivers =
    nuagevrs = nuage_neutron.agent.linux.nuage_interface:NuageInterfaceDriver
neutron.ml2.type_drivers =
    nuage_hybrid_mpls = nuage_neutron.plugins.nuage_ml2.type_nuage_hybrid_mpls:NuageHybridMplsTypeDriver